--- a/styles.css
+++ b/styles.css
@@ -1,116 +1,116 @@
 @font-face {
-    font-family: Pixeloid Mono;
-    src: url(fonts/PixeloidMono-aYe1R.ttf);
-    font-weight: normal;
+  font-family: Pixeloid Mono;
+  src: url(fonts/PixeloidMono-aYe1R.ttf);
+  font-weight: normal;
 }
 
 @font-face {
-    font-family: Pixeloid Sans;
-    src: url(fonts/PixeloidSans-E40en.ttf);
-    font-weight: normal;
+  font-family: Pixeloid Sans;
+  src: url(fonts/PixeloidSans-E40en.ttf);
+  font-weight: normal;
 }
 
 @font-face {
-    font-family: Pixeloid Bold;
-    src: url(fonts/PixeloidSansBold-OG894.ttf);
-    font-weight: bold;
+  font-family: Pixeloid Bold;
+  src: url(fonts/PixeloidSansBold-OG894.ttf);
+  font-weight: bold;
 }
 
 .left-align {
-    float: left;
-    margin-right: 15px;
-    margin-bottom: 10px;
+  float: left;
+  margin-right: 15px;
+  margin-bottom: 10px;
 }
 
 .right-align {
-    float: right;
-    margin-left: 15px;
-    margin-bottom: 10px;
+  float: right;
+  margin-left: 15px;
+  margin-bottom: 10px;
 }
 
 .stack-rows {
-    display: flex;
-    flex-direction: column; /* stack vertically */
-    gap: 10px;
+  display: flex;
+  flex-direction: column; /* stack vertically */
+  gap: 10px;
 }
 
 
 body {
-    margin: 20px;
-    padding: 20px;
-    width: max-content;
-    height: max-content;
-    font-family: Pixeloid Sans, sans-serif;
+  margin: 20px;
+  padding: 20px;
+  width: max-content;
+  height: max-content;
+  font-family: Pixeloid Sans, sans-serif;
 }
 
 h1 {
-    margin-bottom: 20px;
-    font-family: Pixeloid Bold, sans-serif;
+  margin-bottom: 20px;
+  font-family: Pixeloid Bold, sans-serif;
 }
 
 p {
-    margin: 10px 0;
-    font-size: 18px;
+  margin: 10px 0;
+  font-size: 18px;
 }
 
 .centred-text {
-    text-align: center;
+  text-align: center;
 }
 
 .centred-element {
-    width: max-content;
-    margin: auto;
+  width: max-content;
+  margin: auto;
 }
 
 .tabs {
-    display: flex;
-    gap: 10px;
-    margin-bottom: 20px;
-    flex-direction: column;
+  display: flex;
+  gap: 20px;
+  margin: 20px 0px 20px 0px;
+  flex-direction: row;
 }
 
 .stack-columns {
-    display: flex;
-    flex-direction: row; /* stack horizontally */
-    gap: 10px;}
+  display: flex;
+  flex-direction: row; /* stack horizontally */
+  gap: 10px;}
 
 /* Progress bar*/
 .progress-bar {
-    width: 200px;
-    height: 16px;
-    background: #111;
-    border: 3px solid #ffffff;
-    padding: 2px;
-    overflow: hidden;            /* keeps fill inside rounded edges */
-    margin: auto;
+  width: 200px;
+  height: 16px;
+  background: #111;
+  border: 3px solid #ffffff;
+  padding: 2px;
+  overflow: hidden;            /* keeps fill inside rounded edges */
+  margin: auto;
 }
 
 .progress-label {
-    font-size: 19px;
+  font-size: 19px;
 }
 
 .xp-fill {
-    height: 100%;
-    width: 0;                  /* example */
-    background: #44ff44;
-    /*border-radius: 4px;          !* round inner edges *!*/
-    border: 2px solid #22aa22;   /* inner border */
-    box-sizing: border-box;
-    transition: width 0.6s steps(10);
+  height: 100%;
+  width: 0;                  /* example */
+  background: #44ff44;
+  /*border-radius: 4px;          !* round inner edges *!*/
+  border: 2px solid #22aa22;   /* inner border */
+  box-sizing: border-box;
+  transition: width 0.6s steps(10);
 }
 
 .xp-fill::after {
-    content: "";
-    display: block;
-    height: 0;
-    width: 100%;
-    background: rgba(255, 255, 255, 0.2);
+  content: "";
+  display: block;
+  height: 0;
+  width: 100%;
+  background: rgba(255, 255, 255, 0.2);
 }
 
 .progress-container {
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column
 }
 
 /*-------------------*/
