--- a/styles.css
+++ b/styles.css
@@ -38,14 +38,15 @@
 body {
   margin: 20px;
   padding: 20px;
-  width: max-content;
-  height: max-content;
+  width: 500px;
+  height: 434.852px;
   font-family: Pixeloid Sans, sans-serif;
 }
 
 h1 {
   margin-bottom: 20px;
   font-family: Pixeloid Bold, sans-serif;
+  /*text-align: center;*/
 }
 
 p {
@@ -62,17 +63,61 @@ p {
   margin: auto;
 }
 
+/* Tabs */
 .tabs {
   display: flex;
-  gap: 20px;
-  margin: 20px 0px 20px 0px;
   flex-direction: row;
+  align-items: center;
+  margin-bottom: 30px;
+  padding: 0;
+  gap: 15px;
+}
+
+.tab {
+  background: none;
+  border: none;
+  box-shadow: none;
+  appearance: none;
+  -webkit-appearance: none;
+  outline: none;
+  cursor: pointer;
+
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 0 0 auto;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.tab img {
+  display: block;
+  height: 100%;
+  width: auto;
+  pointer-events: none;
+  padding: 0;
+}
+
+.tab:first-child {
+  padding-left: 0;
+}
+/*--------------------*/
+
+/* Tab Content */
+.tab-content {
+  display: none;
+}
+
+.tab-content.active {
+  display: block;
 }
 
 .stack-columns {
   display: flex;
   flex-direction: row; /* stack horizontally */
-  gap: 10px;}
+  gap: 10px;
+}
 
 /* Progress bar*/
 .progress-bar {
@@ -81,7 +126,7 @@ p {
   background: #111;
   border: 3px solid #ffffff;
   padding: 2px;
-  overflow: hidden;            /* keeps fill inside rounded edges */
+  overflow: hidden;
   margin: auto;
 }
 
